View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030090 | Open CASCADE | OCCT:Modeling Algorithms | public | 2018-08-28 11:31 | 2018-09-09 13:05 |
Reporter | emv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.3.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030090: Modeling Algorithms - BRepLib::FindValidRange does not find valid range for the edge | ||||
Description | BRepLib::FindValidRange does not find valid range for the edge. The problem has been discovered in the test case bugs/modalg_7/bug24185 while working on the fix for the issue 0027928. | ||||
Steps To Reproduce | restore [locate_data_file bug30090_edge.brep] e validrange e # edge has no valid range | ||||
Tags | No tags attached. | ||||
Test case number | bugs/modalg_7/bug30090 | ||||
|
Branch CR30090 has been created by emv. SHA-1: 32884bc0954b07da493c5e3005dfde1ebb793f69 Detailed log of new commits: Author: emv Date: Tue Aug 28 12:22:01 2018 +0300 0030090: Modeling Algorithms - BRepLib::FindValidRange does not find valid range for the edge BRepLib::FindValidRange - check each sampling point to be out of tolerance sphere of the vertex. Test case for the issue. |
|
Dear Igor, could you please review the git branch CR30090? Test results - http://jenkins-test-12.nnov.opencascade.com/view/CR30090-master-emv/view/COMPARE/ |
|
Seems to be valid |
|
Combination - OCCT branch : CR30090 SHA - 32884bc0954b07da493c5e3005dfde1ebb793f69 Products branch : master SHA - fdd59e29ebc3a27575d87f779d718af159f5b37b was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17819.639999999727 / 17510.19999999974 [+1.77%] Products Total CPU difference: 7460.370000000047 / 7448.370000000074 [+0.16%] Windows-64-VC14: OCCT Total CPU difference: 17413.377623498527 / 17490.31731669841 [-0.44%] Products Total CPU difference: 8288.738732600004 / 8296.913184999985 [-0.10%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30090 has been deleted by inv. SHA-1: 32884bc0954b07da493c5e3005dfde1ebb793f69 |
occt: master 0e48692e 2018-08-28 09:22:01 Committer: bugmaster Details Diff |
0030090: Modeling Algorithms - BRepLib::FindValidRange does not find valid range for the edge BRepLib::FindValidRange - check each sampling point to be out of tolerance sphere of the vertex. Test case for the issue. |
Affected Issues 0030090 |
|
mod - src/BRepLib/BRepLib_1.cxx | Diff File | ||
add - tests/bugs/modalg_7/bug30090 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-08-28 11:31 | emv | New Issue | |
2018-08-28 11:31 | emv | Assigned To | => msv |
2018-08-28 11:33 | emv | Assigned To | msv => emv |
2018-08-28 11:33 | emv | Status | new => assigned |
2018-08-28 11:33 | emv | Steps to Reproduce Updated | |
2018-08-28 11:35 | emv | Relationship added | related to 0024185 |
2018-08-28 11:35 | emv | Relationship added | related to 0027928 |
2018-08-28 11:47 | emv | Summary | BRepLib::FindValidRange does not find valid range for the edge => Modeling Algorithms - BRepLib::FindValidRange does not find valid range for the edge |
2018-08-28 12:24 | git | Note Added: 0078811 | |
2018-08-31 10:56 | emv | Note Added: 0078876 | |
2018-08-31 10:56 | emv | Assigned To | emv => ifv |
2018-08-31 10:56 | emv | Status | assigned => resolved |
2018-08-31 13:31 | ifv | Note Added: 0078886 | |
2018-08-31 13:31 | ifv | Assigned To | ifv => bugmaster |
2018-08-31 13:31 | ifv | Status | resolved => reviewed |
2018-08-31 17:25 | bugmaster | Note Added: 0078904 | |
2018-08-31 17:25 | bugmaster | Status | reviewed => tested |
2018-08-31 17:26 | bugmaster | Test case number | => bugs/modalg_7/bug30090 |
2018-09-09 11:52 | bugmaster | Changeset attached | => occt master 0e48692e |
2018-09-09 11:52 | bugmaster | Status | tested => verified |
2018-09-09 11:52 | bugmaster | Resolution | open => fixed |
2018-09-09 13:05 | git | Note Added: 0079052 |