0030090: Modeling Algorithms - BRepLib::FindValidRange does not find valid range for the edge

BRepLib::FindValidRange - check each sampling point to be out of tolerance sphere of the vertex.
Test case for the issue.